[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/ion_clip.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/gun-empty.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/sfx_sounds_damage1.wav" type="AudioStream" id=5]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/flash_color = Color( 0, 1, 0, 1 )
shader_param/flash_modifier = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 1, 0, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
material = SubResource( 3 )
script = ExtResource( 1 )
bullet_resource = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
use_parent_material = true
color = Color( 0, 1, 0, 1 )
polygon = PoolVector2Array( -8, -8, -8, 8, 8, 8, 8, -8 )

[node name="Line2D" type="Line2D" parent="."]
use_parent_material = true
points = PoolVector2Array( 0, 0, 16, 0 )
width = 2.0
default_color = Color( 0, 1, 0, 1 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 16, 0 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EmptySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 4 )
anims/Normal = SubResource( 5 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
